# simple_virtual_assembler

./: Cargo.toml
.github/workflows/: rust.yml
locales/: app.yml
src/: assembler.rs  flag.rs  instruction.rs  instructions.rs  language.rs  lib.rs  opcodes.rs  operand.rs  register.rs  virtual_machine.rs
src/assembler/: assembler.rs  mod.rs  parsing_err.rs
src/components/: connection.rs  mod.rs  port.rs  ram.rs
src/vm/: flag.rs  instruction.rs  mod.rs  opcodes.rs  operand.rs  virtual_machine.rs
tests/: multiple_virtual_machine_tests.rs  virtual_machine_test.rs
