[package]
name = "simple_virtual_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For serializon 
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# For localization 
rust-i18n = "2"
